--- a/posts/azure-active-directory-setup.mdx
+++ b/posts/azure-active-directory-setup.mdx
@@ -26,7 +26,7 @@ The traditional SPA flow remains useful to represent a pure SPA architecture and
 
 ### Code Download
 
-Clone the project with the below command:
+Clone the code sample's GitHub repository with the following command:
 
 ```bash
 git clone https://github.com/gary-archer/oauth.websample.azure
@@ -251,7 +251,7 @@ Next run the following script, which downloads some  OpenSSL generated certifica
 
 ### Step 13. Configure SSL Trust
 
-The API and web static content hosting uses SSL so you must ensure that your browser trusts the root certificate at the below location, as explained in the <Link href='/posts/developer-ssl-setup'>Developer SSL Setup</Link> post.
+The API and web static content hosting uses SSL so you must ensure that your browser trusts the root certificate at the below location, as explained in the <Link href='/posts/developer-ssl-setup'>SSL Trust Configuration</Link> post.
 
 ```markdown
 api/certs/authsamples-dev.ca.crt
