--- a/posts/basicspa-execution.mdx
+++ b/posts/basicspa-execution.mdx
@@ -8,7 +8,7 @@ This blog’s code samples run in any Linux based terminal, and are tested on Ub
 
 ### Step 1: Download Code from GitHub
 
-Clone the project with the below command:
+Clone the code sample's GitHub repository with the following command:
 
 ```bash
 git clone https://github.com/gary-archer/oauth.websample1
