--- a/posts/index.mdx
+++ b/posts/index.mdx
@@ -49,7 +49,7 @@ The first theme focuses on foundations and core concepts. It provides integrated
 - <Link href='/posts/spa-back-end-for-front-end'>Backend-for-Frontend Behaviour</Link>
 - <Link href='/posts/final-spa-overview'>Overview</Link>
 - <Link href='/posts/how-to-run-the-react-js-spa'>How to Run the Sample</Link>
-- <Link href='/posts/reactjs-codingkeypoints'>SPA Coding Key Points</Link>
+- <Link href='/posts/reactjs-codingkeypoints'>SPA Code Overview</Link>
 
 ### Theme 2 – API Architecture
 
