--- a/posts/updated-api-coding-key-points.mdx
+++ b/posts/updated-api-coding-key-points.mdx
@@ -1,4 +1,4 @@
-# Updated API – Coding Key Points
+# Updated API – Code Overview
 
 The previous post I provided an <Link href='/posts/updated-spa-coding-key-points'>SPA Code Overview</Link> for the second code sample. Next I summarize the main API code changes.
 
